--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Some more html</title>
 </head>
 <body>
-    
+    <a href="./infinite_scroll.html">infinite_scroll</a>
+    <a href="./speak.html">speak html</a>
+    <a href="./utsav/index.html">utsav</a>
 </body>
 </html>
