a new file added

--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Some more html</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <a href="./infinite_scroll.html">infinite_scroll</a>
-    <a href="./speak.html">speak html</a>
-    <a href="./utsav/index.html">utsav</a>
+    <div class="container"></div>
+    <div class="box1"><a href="./infinite_scroll.html">infinite_scroll</a></div>
+    <div class="box2"><a href="./speak.html">speak html</a></div>
+    <div class="box3"><a href="./utsav/index.html">utsav</a></div>
+    <div class="box4"><a href="./utsav/new_year.html">newYear</a></div>
 </body>
 </html>
