--- a/infinite_scroll.html
+++ b/infinite_scroll.html
@@ -24,7 +24,7 @@
             align-content: center;
             gap: 10px;
             padding-right: 10px;
-            animation: spin 30s infin when IIite linear;
+            animation: spin 30s infinite linear;
         }
         @keyframes spin{
             from{translate: 0;}
