--- a/infinite_scroll.html
+++ b/infinite_scroll.html
@@ -52,7 +52,7 @@
             <div class="card">6</div>
         </div>
         <div aria-hidden class="group">
-            <div class="card">1dfd translate translate minus</div>
+            <div class="card">1</div>
             <div class="card">2</div>
             <div class="card">3</div>
             <div class="card">4</div>
