some changes in the simple4

--- a/simple4/index.html
+++ b/simple4/index.html
@@ -16,8 +16,10 @@
         
         <label for="num2">Enter the tip percentage</label>
         <input type="number" name="num2" id="num2" placeholder="Enter the tip percentage ..." /><br/>
+        <button type="button" onclick="same()">CALCULATE</button>
         <p id="pa"></p>
     </form>
+    
     <script src="index.js"></script>
 </body>
 </html>
